--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         const experiments = {
             "syre-base-titrering": {
                 title: "Syre-base-titrering",
-                photo: "bilder/titrering.jpg",
+                photo: "bilder/titrering.png",
                 description: "Dette forsøket viser hvordan syrer og baser nøytraliserer hverandre. Du skal bruke en titrering for å finne pH-verdien til en ukjent syre.",
                 equipment: ["Begerglass", "Byrette", "Pipette", "pH-indikator", "Ukjent syre", "Sterk base"],
                 goals: ["Lære om nøytralisering", "Forstå pH-skalaen", "Utføre en titrering korrekt"],
@@ -310,3 +310,4 @@
     </script>
 </body>
 </html>
+
