Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         const experiments = {
             "syre-base-titrering": {
                 title: "Syre-base-titrering",
-                photo: "bilder/titrering.png",
+                photo: "titrering.png",
                 description: "Dette forsøket viser hvordan syrer og baser nøytraliserer hverandre. Du skal bruke en titrering for å finne pH-verdien til en ukjent syre.",
                 equipment: ["Begerglass", "Byrette", "Pipette", "pH-indikator", "Ukjent syre", "Sterk base"],
                 goals: ["Lære om nøytralisering", "Forstå pH-skalaen", "Utføre en titrering korrekt"],
@@ -118,7 +118,7 @@
             
             "dansande-rosiner": {
                 title: "Dansende rosiner",
-                photo: "bilder/rosinteater.jpg",
+                photo: "rosinteater.jpg",
                 description: "Dette forsøket viser korleis gassbobler påverkar oppdrift. Rosiner bevegjer seg opp og ned i brus fordi bobler festar seg til overflata.",
                 equipment: ["Begerglass", "Brus med kullsyre", "Rosiner"],
                 goals: [
@@ -310,4 +310,5 @@
     </script>
 </body>
 </html>
+
 
